--- a/blog/app/views/articles/new.html.erb
+++ b/blog/app/views/articles/new.html.erb
@@ -1,4 +1,5 @@
-<%= form_for :article do |f|,url: articles_path do |f| %>
+<h1>New article</h1>
+<%= form_for :article, url: articles_path do |f| %>
   <p>
     <%= f.label :title %><br>
     <%= f.text_field :title %>
